# bevy-jam-2

./: .gitignore  Cargo.toml  README.md  deny.toml  renovate.json
.github/workflows/: build.yml  release.yml
assets/icons/: field.aseprite
assets/sprites/: crop.ase
src/: barrier.rs  camera.rs  combine.rs  despawn.rs  enemy.rs  field.rs  game_over.rs  hud.rs  main.rs  mouse.rs  movement.rs  turret.rs
src/screens/: game_over.rs  mod.rs  ready.rs
wasm/: .gitignore  index.html
