[package]
name = "bevy-jam-2"
version = "0.0.0-dev"
license = "Unlicense"
authors = ["Jonathan Cornaz"]
edition = "2021"
rust-version = "1.62"
description = ""
categories = []
keywords = []

[features]
default = []
dev = ["bevy/dynamic"]
inspector = ["bevy-inspector-egui"]

[dependencies]
bevy = { version = "0.8.0", default-features = false, features = ["animation", "bevy_asset", "bevy_audio", "bevy_scene", "bevy_winit", "render", "png", "vorbis", "x11"] }
bevy-inspector-egui = {  version = "0.12.1", optional = true, default-features = false, features = ["bevy_render", "bevy_sprite", "bevy_text", "bevy_ui"] }

[dev-dependencies]

[profile.dev]
opt-level = 1
debug = false

[profile.release]
lto = true
codegen-units = 1
