[package]
name = "combine-vs-aliens"
version = "1.0.0-alpha.4"
license = "Unlicense"
authors = ["Jonathan Cornaz"]
edition = "2021"
rust-version = "1.62"
description = ""
categories = []
keywords = []

[package.metadata.cargo-all-features]
skip_optional_dependencies = true

[features]
default = []
dev = ["bevy/dynamic"]
inspector = ["dev", "bevy-inspector-egui"]

[dependencies]
bevy = { version = "0.8.1", default-features = false, features = ["animation", "bevy_asset", "bevy_scene", "bevy_winit", "render", "png", "x11"] }
bevy-inspector-egui = {  version = "0.12.1", optional = true, default-features = false, features = ["bevy_render", "bevy_sprite", "bevy_text", "bevy_ui"] }
bevy_kira_audio = { version = "0.12.0", default-features = false, features = ["wav"] }
itertools-num = "0.1.3"
iyes_loopless = "0.7.1"
noise = { version = "0.7.0", default-features = false }
rand = "0.8.5"

[dev-dependencies]

[profile.dev]
opt-level = 1
debug = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 'z'
